[package]
name = "cve_2021_44228_scanner"
version = "0.1.0"
edition = "2021"
authors = ["Fayssal Chokri <chokrifayssal@gmail.com>"]
description = "A scanner for detecting CVE-2021-44228 (Log4Shell) vulnerability"
license = "MIT"

[dependencies]
clap = { version = "4.3", features = ["derive"] }
walkdir = "2.3"
regex = "1.9"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
env_logger = "0.10"
rayon = "1.7"
indicatif = "0.17"
